update for 1.1